Issue 46060: Excel exports are leaving permanent 'temporary poifiles'